--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">EMU Classrooms</string>
     <string name="title_activity_esrahazal">Emu Map</string>
-    <string name="title_activity_main_page">Eastern Mediterranean University</string>
+    <string name="title_activity_main_page">EMU Classrooms</string>
 </resources>
